# robust-AI-lyrics-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
features/: README.md  bert.py  binoculars.py  ensemble.py  entropy.py  feature_extractor.py  gritlm.py  lit_mlp.py  llm2vec.py  loglikelihood.py  luar.py  mms.py  predict.py  predict_features.py  run_features.py  run_save_embeddings.py  sbert.py  w2v2.py  xeus.py
transcription/: README.md  __init__.py  adversarial_augmenter.py  eval_transcripts.py  eval_transcripts_all.py  run_meta.py  run_meta_fake.py  run_whisper.py  run_whisper_fake.py  transcript_utils.py  utils.py
